[gd_scene load_steps=2 format=3 uid="uid://cubxw1qlq5xhf"]

[ext_resource type="Script" uid="uid://chlf0etd3eexq" path="res://enemies/animations/blob_enemy/blob_enemy.gd" id="1_8jaqd"]

[node name="BlobEnemy" type="Node2D"]
script = ExtResource("1_8jaqd")

[node name="Inside" type="Polygon2D" parent="."]
unique_name_in_owner = true
color = Color(1, 0.192157, 0.294118, 0.929412)
polygon = PackedVector2Array(-108, -65, -158, -10, -171, 61, -105, 147, -33, 147, 61, 104, 155, 128, 232, 97, 250, 2, 210, -91, 136, -92, 48, -37, -39, -92)

[node name="WhiteLine" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(-170, 52, -148, -25, -95, -80, -21, -100, 93, -96, 150, -101, 215, -95, 255, 3, 232, 99, 160, 123, 73, 148, -32, 145, -106, 145)
closed = true
default_color = Color(1, 0.838956, 0.574374, 1)

[node name="Outside" type="Polygon2D" parent="."]
unique_name_in_owner = true
color = Color(0.952941, 0.396078, 0, 0.419608)
polygon = PackedVector2Array(-147, -161, -264, -31, -267, 127, -175, 235, -19, 251, 97, 272, 224, 249, 346, 169, 358, -9, 302, -133, 160, -180, 48, -206, -72, -210)

[node name="OrangeLine" type="Line2D" parent="."]
unique_name_in_owner = true
points = PackedVector2Array(-266, -29, -172, -145, -138, -179, -79, -205, 52, -196, 298, -136, 356, -3, 343, 170, 224, 245, 96, 273, -178, 241, -239, 169, -278, 124)
closed = true
default_color = Color(0.921569, 0.470588, 0, 1)
